[fmt] consistent doc tags

--- a/makewiki/templates/base.html
+++ b/makewiki/templates/base.html
@@ -56,8 +56,8 @@
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
 						<!--
-							== CHALLENGE ==
-							Replace # with the url template tag.
+							==CHALLENGES==
+							-> Replace # with the url template tag.
 						--->
 						<a 
 							class="nav-link"
