--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,40 +1,79 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h3>Log In <small class="text-muted">to create your own wiki pages!</small></h3>
+	<h3>
+		Log In
+		<small class="text-muted">
+			to create your own wiki pages!
+		</small>
+	</h3>
 	<hr>
 	<div class="row">
 		<div class="col">
 			{% if form.errors %}
-				<p>Your username and password didn't match. Please try again.</p>
+				<p>
+					There was some sort of error.
+					Please check if your username and password match.
+				</p>
 			{% endif %}
 
 			{% if next %}
 				{% if user.is_authenticated %}
-					<p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
+					<p>
+						Your account doesn't have access to this page.
+						To proceed, please login with an account that has access.
+					</p>
 				{% else %}
 					<p>Please login to see this page.</p>
 				{% endif %}
 			{% endif %}
 
-			<form method="post" action="{% url 'login' %}" class="mx-auto">
+			<form
+				method="post"
+				action="{% url 'login' %}"
+				class="mx-auto"
+			>
 				{% csrf_token %}
 				<div class="form-group row">
 					<div class="col-8">
-						<label for="id_username">Username</label>
-						<input class="form-control" type="text" name="username" id="id_username" required>
+						<label for="id_username">
+							Username
+						</label>
+						<input
+							class="form-control"
+							type="text"
+							name="username"
+							id="id_username"
+							required
+						/>
 					</div>
 				</div>
 				<div class="form-group row">
 					<div class="col-8">
-						<label for="id_password">Password</label>
-						<input class="form-control" type="password" name="password" id="id_password" required>
+						<label for="id_password">
+							Password
+						</label>
+						<input
+							class="form-control"
+							type="password"
+							name="password"
+							id="id_password"
+							required
+						/>
 					</div>
 				</div>
 				<div class="form-group row">
 					<div class="col-8">
-						<input type="submit" value="login" class="btn btn-success">
-						<input type="hidden" name="next" value="{{ next }}">
+						<input
+							type="submit"
+							value="login"
+							class="btn btn-success"
+						/>
+						<input
+							type="hidden"
+							name="next"
+							value="{{ next }}"
+						/>
 					</div>
 				</div>
 			</form>
