--- a/templates/base.html
+++ b/templates/base.html
@@ -34,30 +34,33 @@
 					Hello,
 					<strong>USERNAME</strong>!
 				</div>
-				<a 
-					href="#"
-					class="btn btn-success ml-4"
-				>
-					New Page
-				</a>
-				<a 
-					href="#"
-					class="btn btn-danger ml-2"
-				>
-					Log Out
-				</a>
-				<a 
-					href="#"
-					class="btn btn-secondary ml-2"
-				>
-					Log In
-				</a>
-				<a 
-					href="#"
-					class="btn btn-primary ml-2"
-				>
+				{% if request.user.is_authenticated %}
+					<a
+						href="#"
+						class="btn btn-success ml-4"
+					>
+						New Page
+					</a>
+					<a
+						href="./accounts/logout/"
+						class="btn btn-danger ml-2"
+					>
+						Log Out
+					</a>
+				{% else %}
+					<a
+						href="./accounts/login/"
+						class="btn btn-secondary ml-2"
+					>
+						Log In
+					</a>
+					<a
+						href="#"
+						class="btn btn-primary ml-2"
+					>
 					Sign Up
-				</a>
+					</a>
+				{% endif %}
 			</form>
 		</nav>
 		<main
