--- a/templates/base.html
+++ b/templates/base.html
@@ -1,62 +1,62 @@
 <!doctype html>
-<html lang="en">
+<html lang='en'>
 	<head>
-		<meta charset="utf-8">
+		<meta charset='utf-8'>
 		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+			name='viewport'
+			content='width=device-width, initial-scale=1, shrink-to-fit=no'
 		>
 		<script
-			src="https://kit.fontawesome.com/e7c15fdb77.js"
-			crossorigin="anonymous"
+			src='https://kit.fontawesome.com/e7c15fdb77.js'
+			crossorigin='anonymous'
 		>
 		</script>
 		<link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
+			rel='stylesheet'
+			href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
+			integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T'
+			crossorigin='anonymous'
 		>
 		<title>makewiki</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		<nav class='navbar navbar-expand-md navbar-dark bg-dark'>
 			<a
-				class="navbar-brand"
-				href="{% url 'wiki-list-page' %}"
+				class='navbar-brand'
+				href='{% url 'wiki-list-page' %}'
 			>
-				<i class="fas fa-fw fa-book">
+				<i class='fas fa-fw fa-book'>
 				</i>
 				makewiki
 			</a>
-			<form class="form-inline ml-auto">
+			<form class='form-inline ml-auto'>
 				{% if request.user.is_authenticated %}
-					<div class="text-white">
+					<div class='text-white'>
 						Hello,
 						<strong>{{ request.user }}</strong>!
 					</div>
 					<a
-						href="#"
-						class="btn btn-success ml-4"
+						href='#'
+						class='btn btn-success ml-4'
 					>
 						New Page
 					</a>
 					<a
-						href="./accounts/logout/"
-						class="btn btn-danger ml-2"
+						href='./accounts/logout/'
+						class='btn btn-danger ml-2'
 					>
 						Log Out
 					</a>
 				{% else %}
 					<a
-						href="./accounts/login/"
-						class="btn btn-secondary ml-2"
+						href='./accounts/login/'
+						class='btn btn-secondary ml-2'
 					>
 						Log In
 					</a>
 					<a
-						href="#"
-						class="btn btn-primary ml-2"
+						href='./accounts/signup/'
+						class='btn btn-primary ml-2'
 					>
 					Sign Up
 					</a>
@@ -64,16 +64,16 @@
 			</form>
 		</nav>
 		<main
-			role="main"
-			class="container"
-			style="margin-top: 4vh;"
+			role='main'
+			class='container'
+			style='margin-top: 4vh;'
 		>
 			{% block content %}
-			<div class="row">
-				<div class="col m-4">
+			<div class='row'>
+				<div class='col m-4'>
 					<div
-						class="alert alert-warning"
-						role="alert"
+						class='alert alert-warning'
+						role='alert'
 					>
 						If you see this, you forgot
 						<code>{% verbatim %}{% block content %}{% endblock %}{% endverbatim %}</code>
@@ -84,21 +84,21 @@
 			{% endblock %}
 		</main>
 		<script
-			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-			crossorigin="anonymous"
+			src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
+			integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN'
+			crossorigin='anonymous'
 		>
 		</script>
 		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-			integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-			crossorigin="anonymous"
+			src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'
+			integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q'
+			crossorigin='anonymous'
 		>
 		</script>
 		<script
-			src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-			crossorigin="anonymous"
+			src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js'
+			integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl'
+			crossorigin='anonymous'
 		>
 		</script>
 	</body>
