--- a/wiki/templates/partials/card.html
+++ b/wiki/templates/partials/card.html
@@ -8,6 +8,7 @@
 			<hr />
 			<div class="text-right">
 				<!--
+				==CHALLENGES==
 				<a
 					href="%{ url 'wiki-details-page' page.slug }%"
 					title="Read More"
